# mel

./: .gitignore  Cargo.toml  README.md  initTree.json
.cargo/: tmp_config
src/: main.rs
src/modules/: catfile.rs  edit_init_file.rs  edit_til.rs  get_url.rs  geturl.rs  init.rs  list.rs  markdown.rs  mod.rs  options.rs  showlist.rs  uname.rs  wconsole.rs  writefile.rs
src/modules/markdown/: linux_markdown.rs  markdown.rs  mod.rs
src/modules/wconsole/: linux_mac.rs  mod.rs
tests/: lib.rs
